--- a/assets/templates/component-reduxContainer.template
+++ b/assets/templates/component-reduxContainer.template
@@ -3,6 +3,7 @@ import { View, Text } from {quotes}react-native{quotes};
 import { connect } from {quotes}react-redux{quotes};
 import PropTypes from {quotes}prop-types{quotes};
 import * as styles from {quotes}./{componentName}.styles{quotes};
+//import { {componentName}Wrapper } from {quotes}./{componentName}.styles{quotes};
 
 class {componentName} extends PureComponent { 
   constructor(props) {
